記事のベース記載

--- a/articles/842ff9d2121ba7.md
+++ b/articles/842ff9d2121ba7.md
@@ -2,6 +2,37 @@
 title: "サーバーチームにスクラム開発を導入してみた話"
 emoji: "🌊"
 type: "tech" # tech: 技術記事 / idea: アイデア
-topics: []
-published: false
+topics: ["スクラム"] # タグ。["markdown", "rust", "aws"]のように指定する
+published: true # 公開設定（falseにすると下書き）
 ---
+こちらは「[Applibot Advent Calendar 2022](https://qiita.com/advent-calendar/2022/applibot)」10日目の記事になります。
+前日は [@s-mino](https://qiita.com/s-mino) さんの[Domain Modeling Made Functional を読みました](https://qiita.com/s-mino/items/b59ea0e13327e6040e30)という記事でした！
+
+:::details 目次(クリックすると展開されます)
+<!-- TOC -->
+
+- [はじめに](#はじめに)
+- [概要](#概要)
+- [大項目](#大項目)
+    - [中項目](#中項目)
+- [まとめ](#まとめ)
+
+<!-- /TOC -->
+:::
+
+## はじめに
+本記事ではXXXを紹介していきます。
+
+## 概要
+概要を書きます。
+
+## 大項目
+大項目の内容を書きます。
+
+### 中項目
+中項目の内容を書きます。
+
+## まとめ
+まとめを書きます。
+
+以上、「[Applibot Advent Calendar 2022](https://qiita.com/advent-calendar/2022/applibot)」 10日目の記事でした。
