途中経過保存

--- a/articles/842ff9d2121ba7.md
+++ b/articles/842ff9d2121ba7.md
@@ -1,9 +1,9 @@
 ---
 title: "サーバーチームにスクラム開発を導入してみた話"
-emoji: "🌊"
+emoji: "🍡"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["スクラム"] # タグ。["markdown", "rust", "aws"]のように指定する
-published: true # 公開設定（falseにすると下書き）
+published: false # 公開設定（falseにすると下書き）
 ---
 こちらは「[Applibot Advent Calendar 2022](https://qiita.com/advent-calendar/2022/applibot)」10日目の記事になります。
 前日は [@s-mino](https://qiita.com/s-mino) さんの[Domain Modeling Made Functional を読みました](https://qiita.com/s-mino/items/b59ea0e13327e6040e30)という記事でした！
@@ -22,18 +22,129 @@ published: true # 公開設定（falseにすると下書き）
 
 ## はじめに
 ***
-本記事ではXXXを紹介していきます。
+本記事では私がリーダーをやらせていただいているサーバーチームにスクラム開発を取り入れら際のことを紹介していきます。
+取り入れたチームの性質上、厳密に言うとスクラム開発でない部分もあるかと思います。
+スクラム開発をベースにチームや課題に合った形で取り入れた点はご留意ください。
 
-## 概要
+## きっかけ
 ***
-概要を書きます。
+社内のサーバーエンジニア組織で分科会と言うものがありその一環でリーダーに必要なスキルについて考え学ぶ機会がありました。
+その中で開発手法を学ぶこともあり、その1つとしてスクラム開発に触れました。
+スクラムに関する本を読んだり議論しりたりしましたが、実際の現場に導入して知見を得たいと思ったことがきっかけでした。
 
-## 大項目
+## あああ
 ***
-大項目の内容を書きます。
+しかし、既に稼働している大きな組織にいきなり導入することは難しいと考え、まずは自分のいるサーバーチームに小規模で導入してみようと考えました。
+タイミング的に機能開発関連のタスクが落ち着いており、私がリーダーをやらせていただいていると言うこともありスケジュール調整にある程度融通が効くため進めることにしました。
 
-### 中項目
-中項目の内容を書きます。
+## 導入の目的
+***
+今回、スクラム開発を導入するにあたって以下3つを達成することを目的としました。
+- Issueの消化できる仕組みづくり
+- 自らやることを選択して自主的に進められる状態を作る
+- 振り返りの習慣を付け
+
+### Issueの消化できる仕組みづくり
+私のチームでは、日頃作業をしていく中で思い付いた改善をGithubのIssueとして挙げていくようにしていました。
+しかし、メインの開発タスク優先のためそういった改善は後回しにしがちになり、改善があまり進まない状態になっていました。
+今回スクラム開発を実践するにあたり、他セクションに依存しないタスクをこなす必要があったためこのサーバーチームの改善は最適でした。
+
+### 自らやることを選択して自主的に進められる状態を作る
+普段の開発タスクは、どうしてもスケジュールなどの理由から他タスクの状況なども踏まえつつこちらから依頼することが多くなってしまします。
+そのため、お願いされたからやるという意識がどこかに出てしまうこともあります。
+メンバーは当事者意識が高く普段からお願いしたタスクはしっかりやり切ってくれているので課題にはなっていませんが、自分でやることを選択するという機会を提供できていないと感じたためこれは良いと考えました。
+
+### 振り返りの習慣を付け
+アプリボットでは「振り返りと計画」を習慣化するという取り組みがあり、スクラム開発のスプリントレトロスペクティブがこの取り組みに良いと考えました。
+
+## 導入時の課題
+***
+### そもそもスクラムの知見がない
+私を含めメンバーは今までスクラム開発に触れる機会がなくスクラムとはなにか？をわからない状態でした。
+そのため、スクラム開発を導入するにあたり小さいですが課題もありました。
+そこで、導入前にスクラム開発とはどんなものなのか、導入した際にどんなことをするのかをまとめた資料を作って展開しました。
+おそらく、スクラム開発をメンバー全員が理解しないまま進めていたら目的や意図がうまく伝わらず、同じ方向を向いて開発を進めることが難しかったと思います。
+
+### 作業時間が少なくなる
+普段からミーティングなどが多く入っているメンバーもおり、追加でミーティングを増やすことで作業時間が少なくなってしまいます。
+そこで、できる限り現時点でやっているミーティングなどを使い実践できる方法を考えました。
+実際にどんな会議や作業が必要になり、それぞれどんな目的でやるのか、どれくらいのボリュームなのかも資料に記載し説明しました。
+
+## 実施の取り組み
+***
+では、実際にどのように進めていったのかを説明します。
+
+### スプリント
+1スプリントは1週間に設定しました。
+主に改善を扱うため、各タスクをあまり長くなりすぎないようにしようと考え1週間が適切と考えました。
+また、「振り返りと計画」を習慣化する、という取り組みが1週間単位での目標設定と振り返りを行うため、その周期に合わせることにしました。
+
+### スクラムイベント
+スクラムにおけるスクラムイベントについてどのような形で取り入れたのかを説明します。
+
+#### スプリントプランニング
+毎週月曜日に実施。
+時間は1時間 → 途中で30分に変更。
+月曜日が祝日などで休みの場合は火曜日に実施。
+ストーリポイント出しと担当者決めを行う。
+はじめは上記2つをこの時間に実施していましたが、メンバー全員の時間を1時間取ることが難しいことが多かったためこの時間を30分にし、ストリーポイント出しを切り離して実施することにしました。
+
+##### ストーリーポイント出し
+メンバー全員でプランニングポーカーを用いて実施しました。
+事前に基準（3になるもの）となるストーリーポイントを定めて試算するようにしました。
+提示したポイントの理由も話し合うようにし、 見落としていた懸念の洗い出せるようにしました。
+
+##### 対応者決め
+スプリントバックログに挙がっているものからメンバーが自らやりたいものを自身のスケジュールを考慮しながら選択してもらいました。
+
+##### 作業細分化
+担当者になった人が自身が行う具体的なタスクを洗い出し、そのタスクそれぞれに対して工数を見積もります。
+理想としてじゃ1日以下で完結する単位で分割するようにしました。
+
+#### デイリースクラム
+チーム朝会は既に毎朝15分程度実施しており、その中でタスク確認をしていたため、新たにミーティングを追加するのではなく、報告内容をしっかりと決めることにしました。
+決めた内容は以下の通りです。
+・昨日したこと
+・今日すること
+・相談したいことの頭出し（この場で深掘りせず別途時間を取り、関係者を集めて相談する）
+細分化したタスクはwrikeで進捗管理を行っていたので、wrikeの画面を全員でみながら進捗の更新などを行いました。
+
+#### スプリントレビュー
+毎週金曜日に実施。
+時間は30分。
+金曜日が休みの場合は前日木曜日に実施。
+各担当者が実際の画面を見せながら成果を見せる形式で実施しました。
+また、その成果に対してみんなで褒め合うようにしました。
+
+#### スプリントレトロスペクティブ
+既に実施していた「振り返りと計画」を習慣化するという施策で毎週金曜日に時間が取られていたので、その時間をそのまま使用しました。
+以下の順番で進めました
+1. 先週立てた目標に対する振り返り
+2. 振り返りに対し、改善案の検討
+3. 改善案を受けての次週の目標設定
+
+### 作成物
+スクラム開発を進めるにあたって実際に作成しやものについて説明します。
+
+#### プロダクトバックログ
+Githubブロジェクトボードでステータスがプロダクトバックログになっているもの
+New Issue を精査し、プロダクトバックログを作成する
+TODO：Issueを登録したら自動でプロジェクトボードに登録される仕組みを作る
+プロダクトバックログ内の作業順を決定する
+ボードの上にあるものほど作業順が早くなる
+
+#### スプリントバックログ
+スプリントプランニングで細分化したタスクをwrikeに登録する
+作業の細分化と見積もり
+issueに細分化した作業とそれにかかる工数を記載
+wrikeへの登録
+対応者が細分化した作業と工数をもとにwrikeのタスクを作成・スケジューリング
+
+## 進めていく中で出てきた問題と改善
+進めていく中で出てきた問題と改善を書きます。
+
+## スクラム開発を導入してよかったこと
+スクラム開発を導入してよかったことを書きます。
 
 ## まとめ
 ***
