--- a/articles/842ff9d2121ba7.md
+++ b/articles/842ff9d2121ba7.md
@@ -31,9 +31,6 @@ published: false # 公開設定（falseにすると下書き）
 社内のサーバーエンジニア組織で分科会と言うものがありその一環でリーダーに必要なスキルについて考え学ぶ機会がありました。
 その中で開発手法を学ぶこともあり、その1つとしてスクラム開発に触れました。
 スクラムに関する本を読んだり議論しりたりしましたが、実際の現場に導入して知見を得たいと思ったことがきっかけでした。
-
-## あああ
-***
 しかし、既に稼働している大きな組織にいきなり導入することは難しいと考え、まずは自分のいるサーバーチームに小規模で導入してみようと考えました。
 タイミング的に機能開発関連のタスクが落ち着いており、私がリーダーをやらせていただいていると言うこともありスケジュール調整にある程度融通が効くため進めることにしました。
 
@@ -65,7 +62,7 @@ published: false # 公開設定（falseにすると下書き）
 そこで、導入前にスクラム開発とはどんなものなのか、導入した際にどんなことをするのかをまとめた資料を作って展開しました。
 おそらく、スクラム開発をメンバー全員が理解しないまま進めていたら目的や意図がうまく伝わらず、同じ方向を向いて開発を進めることが難しかったと思います。
 
-### 作業時間が少なくなる
+### 作業時間が少なくなる（可能性がある）
 普段からミーティングなどが多く入っているメンバーもおり、追加でミーティングを増やすことで作業時間が少なくなってしまいます。
 そこで、できる限り現時点でやっているミーティングなどを使い実践できる方法を考えました。
 実際にどんな会議や作業が必要になり、それぞれどんな目的でやるのか、どれくらいのボリュームなのかも資料に記載し説明しました。
