--- a/articles/842ff9d2121ba7.md
+++ b/articles/842ff9d2121ba7.md
@@ -58,14 +58,18 @@ published: false # 公開設定（falseにすると下書き）
 ***
 ### そもそもスクラムの知見がない
 私を含めメンバーは今までスクラム開発に触れる機会がなくスクラムとはなにか？をわからない状態でした。
-そのため、スクラム開発を導入するにあたり小さいですが課題もありました。
 そこで、導入前にスクラム開発とはどんなものなのか、導入した際にどんなことをするのかをまとめた資料を作って展開しました。
 おそらく、スクラム開発をメンバー全員が理解しないまま進めていたら目的や意図がうまく伝わらず、同じ方向を向いて開発を進めることが難しかったと思います。
 
 ### 作業時間が少なくなる（可能性がある）
 普段からミーティングなどが多く入っているメンバーもおり、追加でミーティングを増やすことで作業時間が少なくなってしまいます。
 そこで、できる限り現時点でやっているミーティングなどを使い実践できる方法を考えました。
-実際にどんな会議や作業が必要になり、それぞれどんな目的でやるのか、どれくらいのボリュームなのかも資料に記載し説明しました。
+実際にどんな会議や作業が必要になり、それぞれどんな目的でやるのか、どれくらいのボリュームなのか資料を使いながら説明しました。
+
+### 在宅ワークの日もあるため毎日顔を合わせられない
+週2で在宅ワークの日があり、毎日同じ場所に集まることができない。
+物理的なホワイトボードなどを使って進捗の可視化することが困難。
+プロダクトバックログやスプリントバックログは、webツールを使って可視化した。
 
 ## 実施の取り組み
 ***
