インデントなど調整

--- a/articles/842ff9d2121ba7.md
+++ b/articles/842ff9d2121ba7.md
@@ -90,24 +90,28 @@ published: false # 公開設定（falseにすると下書き）
 ストーリポイント出しと担当者決めを行う。
 はじめは上記2つをこの時間に実施していましたが、メンバー全員の時間を1時間取ることが難しいことが多かったためこの時間を30分にし、ストリーポイント出しを切り離して実施することにしました。
 
-##### ストーリーポイント出し
+- ストーリーポイント出し
+
 メンバー全員でプランニングポーカーを用いて実施しました。
 事前に基準（3になるもの）となるストーリーポイントを定めて試算するようにしました。
 提示したポイントの理由も話し合うようにし、 見落としていた懸念の洗い出せるようにしました。
 
-##### 対応者決め
+- 対応者決め
+
 スプリントバックログに挙がっているものからメンバーが自らやりたいものを自身のスケジュールを考慮しながら選択してもらいました。
 
-##### 作業細分化
+- 作業細分化
+
 担当者になった人が自身が行う具体的なタスクを洗い出し、そのタスクそれぞれに対して工数を見積もります。
 理想としてじゃ1日以下で完結する単位で分割するようにしました。
 
 #### デイリースクラム
 チーム朝会は既に毎朝15分程度実施しており、その中でタスク確認をしていたため、新たにミーティングを追加するのではなく、報告内容をしっかりと決めることにしました。
 決めた内容は以下の通りです。
-・昨日したこと
-・今日すること
-・相談したいことの頭出し（この場で深掘りせず別途時間を取り、関係者を集めて相談する）
+1. 昨日したこと
+2. 今日すること
+3. 相談したいことの頭出し（この場で深掘りせず別途時間を取り、関係者を集めて相談する）
+
 細分化したタスクはwrikeで進捗管理を行っていたので、wrikeの画面を全員でみながら進捗の更新などを行いました。
 
 #### スプリントレビュー
