--- a/articles/842ff9d2121ba7.md
+++ b/articles/842ff9d2121ba7.md
@@ -16,7 +16,8 @@ published: false # 公開設定（falseにすると下書き）
 - [導入の目的](#導入の目的)
 - [導入時の課題](#導入時の課題)
 - [実際の取り組み](#実際の取り組み)
-- [進めていく中で出てきた課題と改善](#進めていく中で出てきた課題と改善)
+- [進めていく中で出てきた課題](#進めていく中で出てきた課題)
+- [課題に対する改善](#課題に対する改善)
 - [導入してよかったこと](#導入してよかったこと)
 - [まとめ](#まとめ)
 
@@ -148,9 +149,13 @@ issueに細分化した作業とそれにかかる工数を記載
 wrikeへの登録
 対応者が細分化した作業と工数をもとにwrikeのタスクを作成・スケジューリング
 
-## 進めていく中で出てきた問題と改善
+## 進めていく中で出てきた課題
 ***
-進めていく中で出てきた問題と改善を書きます。
+進めていく中で出てきた問題を書きます。
+
+## 課題に対する改善
+***
+進めていく中で出てきた問題に対する改善を書きます。
 
 ## 導入してよかったこと
 ***
