--- a/articles/842ff9d2121ba7.md
+++ b/articles/842ff9d2121ba7.md
@@ -41,21 +41,21 @@ published: false # 公開設定（falseにすると下書き）
 ## 導入の目的
 ***
 今回、スクラム開発を導入するにあたって以下3つを達成することを目的としました。
-- Issueの消化できる仕組みづくり
-- 自らやることを選択して自主的に進められる状態を作る
-- 振り返りの習慣を付け
 
-### Issueの消化できる仕組みづくり
+- **Issueの消化できる仕組みづくり**
+
 私のチームでは、日頃作業をしていく中で思い付いた改善をGithubのIssueとして挙げていくようにしていました。
 しかし、メインの開発タスク優先のためそういった改善は後回しにしがちになり、改善があまり進まない状態になっていました。
 今回スクラム開発を実践するにあたり、他セクションに依存しないタスクをこなす必要があったためこのサーバーチームの改善は最適でした。
 
-### 自らやることを選択して自主的に進められる状態を作る
+- **自らやることを選択して自主的に進められる状態を作る**
+
 普段の開発タスクは、どうしてもスケジュールなどの理由から他タスクの状況なども踏まえつつこちらから依頼することが多くなってしまします。
 そのため、お願いされたからやるという意識がどこかに出てしまうこともあります。
 メンバーは当事者意識が高く普段からお願いしたタスクはしっかりやり切ってくれているので課題にはなっていませんが、自分でやることを選択するという機会を提供できていないと感じたためこれは良いと考えました。
 
-### 振り返りの習慣を付け
+- **振り返りの習慣を付け**
+
 アプリボットでは「振り返りと計画」を習慣化するという取り組みがあり、スクラム開発のスプリントレトロスペクティブがこの取り組みに良いと考えました。
 
 ## 導入時の課題
