追記（文章整える必要あり）

--- a/articles/842ff9d2121ba7.md
+++ b/articles/842ff9d2121ba7.md
@@ -92,7 +92,6 @@ published: false # 公開設定（falseにすると下書き）
 時間は1時間 → 途中で30分に変更。
 月曜日が祝日などで休みの場合は火曜日に実施。
 ストーリポイント出しと担当者決めを行う。
-はじめは上記2つをこの時間に実施していましたが、メンバー全員の時間を1時間取ることが難しいことが多かったためこの時間を30分にし、ストリーポイント出しを切り離して実施することにしました。
 
 - ストーリーポイント出し
 
@@ -151,18 +150,62 @@ wrikeへの登録
 
 ## 進めていく中で出てきた課題
 ***
-進めていく中で出てきた問題を書きます。
+- 無料のプランニングポーカーツールの使い勝手が悪かった 
+ルームが一定時間経つと勝手に解散されてしまう
+
+- スプリントプランニングの時間をまとめて取れない
+  プロジェクト以外のミーティングに参加しているメンバーもおり、メンバー全員が揃う時間を1時間まとめて取ることが難しいことが多かった。
+
+- 振り返りが長引くことがあった
+スプリントレトロスペクティブで振り返り、改善を考える際に議論が盛り上がって時間が足りないことがあった。
+
+- 休暇などでミーティングに出られないメンバーがいることがある
+病欠や家庭の事情などで急遽休みのメンバーが出て全員揃って開催が難しい時があった
 
 ## 課題に対する改善
 ***
-進めていく中で出てきた問題に対する改善を書きます。
+- 無料のプランニングポーカーツールの使い勝手が悪かった
+メンバーが自前でツールを作ってくれた
+とても使い勝手が良かった
+
+- スプリントプランニングの時間をまとめて取れない
+スプリントプランニングをストーリーポイント出しと担当決めを各30分ずつに分けてミーティングを行うようにした。
+ただし、ストーリーポイント出しが済んでいないと担当決めはできないので、前後関係は守るようにした。
+
+- 振り返りが長引くことがあった
+振り返り用のフォーマット（アジェンダ）を用意してその流れに沿って行うようにした。
+
+- 休暇などでミーティングに出られないメンバーがいることがある
+メンバーがかけた状態で開催せずに必ず全員揃って開催するようにした。
+翌日などで調整。
+その場合、スプリントの開始が遅くなる（1日分工数が減る）がメンバー全員で進めることを優先とした。
 
 ## 導入してよかったこと
 ***
-スクラム開発を導入してよかったことを書きます。
+- 各メンバーが今日何をして、どんなステータスなのかがわかりやすくなった
+それぞれが担当しているタスクのステータスをみんながいる前で更新するため、対応者以外でも進捗把握がしやすくなった。
+メンバー同士の連携もしやすくなった。
+
+- チーム全員で対応内容の認識合わせができた
+スプリントプランニングでの工数だしの際にその対応はどんな作業が発生し、どんなことに気をつけなければいけないのかの共有ができた。
+それにより、関連箇所に詳しくないメンバーでも対応をスムーズに進められた。
+また、属人化しそうな部分に気づくこともできた。
+
+- やらされてる感がない
+各メンバーが自分で次のスプリントでやりたいことを選択していたので、決めたタスクに対する
+
+- 属人化が薄まった
+スプリントレビュー
+最終的にどう落とし込まれたのか全員で共有できたので、作業者以外も対応内容と結果を正しく把握することができた
 
 ## まとめ
 ***
-まとめを書きます。
+まず、スクラム開発に参加する人全員がスクラム開発とはどのようなものなのかをインプットすることから始めることが大切。
+何よりも全員の理解と協力が必要。
+小規模なチームかつそのチーム内で完結するならば開発がある程度進んでも導入できる。
+開発要件が詰まり切っていない状態のチームでは導入は難しい。
+せめて開発締め時点でのシステムのゴール（成果物の要件）がしっかりと決まっている必要がありそう。
+今回、私が行った開発手法は厳密にはスクラム開発とは異なる進め過多になってしまった部分もありましたが、スクラム開発を進める上で障害になりそうなことや得られるメリットの一部について知ることができたのは良い経験になりました。
+書籍には書かれていない細かい課題に対する対応やそれによる影響など、実践しないとわからないこともあり得るものが多くありました。
 
 以上、「[Applibot Advent Calendar 2022](https://qiita.com/advent-calendar/2022/applibot)」 10日目の記事でした。
