--- a/articles/842ff9d2121ba7.md
+++ b/articles/842ff9d2121ba7.md
@@ -86,67 +86,67 @@ published: false # 公開設定（falseにすると下書き）
 
 ### スクラムイベント
 スクラムにおけるスクラムイベントについてどのような形で取り入れたのかを説明します。
+専門用語では直感で何をするのかわかりづらかったため、チーム内ではあまり使いませんでした。
 
-#### スプリントプランニング
-毎週月曜日に実施。
-時間は1時間 → 途中で30分に変更。
-月曜日が祝日などで休みの場合は火曜日に実施。
-ストーリポイント出しと担当者決めを行う。
+#### 工数出し・担当決め（スプリントプランニング）
+- 毎週月曜日に実施
+- 時間は1時間
+- 月曜日が祝日などで休みの場合は火曜日に実施
 
-- ストーリーポイント出し
-
+##### 概算見積もり
 メンバー全員でプランニングポーカーを用いて実施しました。
-事前に基準（3になるもの）となるストーリーポイントを定めて試算するようにしました。
+事前に基準（3になるもの）となるポイントを定めて試算するようにしました。
 提示したポイントの理由も話し合うようにし、 見落としていた懸念の洗い出せるようにしました。
 
-- 対応者決め
+##### 対応者決め
+スプリントバックログの中から着手順の上位のものをやりたいものを自身のスケジュールを考慮しながら選択してもらいました。
 
-スプリントバックログに挙がっているものからメンバーが自らやりたいものを自身のスケジュールを考慮しながら選択してもらいました。
+##### 作業細分化
+担当者になった人が具体的なタスクを洗い出し、そのタスクそれぞれに対して工数を見積もります。
+理想として1日以下で完結する単位で分割するように心がけました。
 
-- 作業細分化
+#### 朝会（デイリースクラム）
+- 毎朝実施
+- 時間は15分
+- メンバーが揃わなくても実施
 
-担当者になった人が自身が行う具体的なタスクを洗い出し、そのタスクそれぞれに対して工数を見積もります。
-理想としてじゃ1日以下で完結する単位で分割するようにしました。
-
-#### デイリースクラム
-チーム朝会は既に毎朝15分程度実施しており、その中でタスク確認をしていたため、新たにミーティングを追加するのではなく、報告内容をしっかりと決めることにしました。
-決めた内容は以下の通りです。
+タスクはwrikeで進捗管理を行っていたので、wrikeの画面を全員でみながら進捗の更新などを行いました。
+各メンバーから方おくしてもらう内容は以下の通りです。
 1. 昨日したこと
 2. 今日すること
 3. 相談したいことの頭出し（この場で深掘りせず別途時間を取り、関係者を集めて相談する）
 
-細分化したタスクはwrikeで進捗管理を行っていたので、wrikeの画面を全員でみながら進捗の更新などを行いました。
+#### お披露目会（スプリントレビュー）
+- 毎週金曜日に実施。
+- 時間は30分。
+- 金曜日が休みの場合は前日に実施。
 
-#### スプリントレビュー
-毎週金曜日に実施。
-時間は30分。
-金曜日が休みの場合は前日木曜日に実施。
 各担当者が実際の画面を見せながら成果を見せる形式で実施しました。
 また、その成果に対してみんなで褒め合うようにしました。
 
-#### スプリントレトロスペクティブ
+#### 振り返り（スプリントレトロスペクティブ）
+- 毎週金曜日に実施。
+- 時間は30分。
+
 既に実施していた「振り返りと計画」を習慣化するという施策で毎週金曜日に時間が取られていたので、その時間をそのまま使用しました。
 以下の順番で進めました
 1. 先週立てた目標に対する振り返り
 2. 振り返りに対し、改善案の検討
 3. 改善案を受けての次週の目標設定
 
-### 作成物
+### プロジェクト管理ツール
 スクラム開発を進めるにあたって実際に作成しやものについて説明します。
 
 #### プロダクトバックログ
-Githubブロジェクトボードでステータスがプロダクトバックログになっているもの
-New Issue を精査し、プロダクトバックログを作成する
-TODO：Issueを登録したら自動でプロジェクトボードに登録される仕組みを作る
-プロダクトバックログ内の作業順を決定する
-ボードの上にあるものほど作業順が早くなる
+GithubのProjectボードを使ってIssueを管理しました。
+今回取り扱うも対応がIssueだったということもあり、管理しやすいと考えました。
+ボード形式なのでそれぞれのタスクの進捗が見やすく、直感的にステータスを変更できるのでタスクの可視化に最適でした。
+各々が改善したいことを随時GithubのIssueに登録し、
+私が内容を確認し、既存のIssueとも比較しつつProjectボードに登録及び作業順に並び替えを行いました。
 
 #### スプリントバックログ
-スプリントプランニングで細分化したタスクをwrikeに登録する
-作業の細分化と見積もり
-issueに細分化した作業とそれにかかる工数を記載
-wrikeへの登録
-対応者が細分化した作業と工数をもとにwrikeのタスクを作成・スケジューリング
+プロジェクト全体の進捗管理としてwrikeを使用していたので、具体的なタスクに落とし込む際はwrikeを使いました。
+issueに細分化した作業とそれにかかる工数を記載、 対応者が細分化した作業と工数をもとに私がwrikeのタスクを作成とスケジューリングを行いました。
 
 ## 進めていく中で出てきた課題
 ***
@@ -154,7 +154,7 @@ wrikeへの登録
 ルームが一定時間経つと勝手に解散されてしまう
 
 - スプリントプランニングの時間をまとめて取れない
-  プロジェクト以外のミーティングに参加しているメンバーもおり、メンバー全員が揃う時間を1時間まとめて取ることが難しいことが多かった。
+プロジェクト以外のミーティングに参加しているメンバーもおり、メンバー全員が揃う時間を1時間まとめて取ることが難しいことが多かった。
 
 - 振り返りが長引くことがあった
 スプリントレトロスペクティブで振り返り、改善を考える際に議論が盛り上がって時間が足りないことがあった。
@@ -200,12 +200,11 @@ wrikeへの登録
 
 ## まとめ
 ***
-まず、スクラム開発に参加する人全員がスクラム開発とはどのようなものなのかをインプットすることから始めることが大切。
-何よりも全員の理解と協力が必要。
-小規模なチームかつそのチーム内で完結するならば開発がある程度進んでも導入できる。
-開発要件が詰まり切っていない状態のチームでは導入は難しい。
-せめて開発締め時点でのシステムのゴール（成果物の要件）がしっかりと決まっている必要がありそう。
-今回、私が行った開発手法は厳密にはスクラム開発とは異なる進め過多になってしまった部分もありましたが、スクラム開発を進める上で障害になりそうなことや得られるメリットの一部について知ることができたのは良い経験になりました。
-書籍には書かれていない細かい課題に対する対応やそれによる影響など、実践しないとわからないこともあり得るものが多くありました。
+スクラムガイド通りの導入とはいかず、今回行った開発手法は厳密にはスクラム開発とは異なる進め方になってしまった部分も多くありました。
+しかしながら、スクラム開発を進める上で障害になりそうなことや得られるメリットの一部については経験できたのは良い学びになりました。
+また、書籍には書かれていない細かい課題に対する対応やそれによる影響など、実践しないとわからないこともありました。
+
+最後まで読んでいただき、ありがとうございました。
+
 
 以上、「[Applibot Advent Calendar 2022](https://qiita.com/advent-calendar/2022/applibot)」 10日目の記事でした。
