--- a/articles/842ff9d2121ba7.md
+++ b/articles/842ff9d2121ba7.md
@@ -94,7 +94,7 @@ published: false # 公開設定（falseにすると下書き）
 2. 振り返りに対し、改善案の検討
 3. 改善案を受けての次週の目標設定
 
-### プロジェクト管理ツール
+### 使用した管理ツール
 スクラム開発を進めるにあたって実際に作成しやものについて説明します。
 
 #### プロダクトバックログ
