管理ツール部分調整

--- a/articles/842ff9d2121ba7.md
+++ b/articles/842ff9d2121ba7.md
@@ -98,15 +98,13 @@ published: false # 公開設定（falseにすると下書き）
 スクラム開発を進めるにあたって実際に作成しやものについて説明します。
 
 #### プロダクトバックログ
-GithubのProjectボードを使ってIssueを管理しました。
-今回取り扱うも対応がIssueだったということもあり、管理しやすいと考えました。
+GitHubのissueに登録するようにしました。
+そのissueをProjectボードを使って管理しています。
 ボード形式なのでそれぞれのタスクの進捗が見やすく、直感的にステータスを変更できるのでタスクの可視化に最適でした。
-各々が改善したいことを随時GithubのIssueに登録し、
-私が内容を確認し、既存のIssueとも比較しつつProjectボードに登録及び作業順に並び替えを行いました。
 
 #### スプリントバックログ
 プロジェクト全体の進捗管理としてwrikeを使用していたので、具体的なタスクに落とし込む際はwrikeを使いました。
-issueに細分化した作業とそれにかかる工数を記載、 対応者が細分化した作業と工数をもとに私がwrikeのタスクを作成とスケジューリングを行いました。
+担当者にissueに細分化した作業と工数を記載してもらい、それをもとにwrikeに登録しています。
 
 ## 導入時の課題
 ***
