--- a/articles/842ff9d2121ba7.md
+++ b/articles/842ff9d2121ba7.md
@@ -1,5 +1,5 @@
 ---
-title: "サーバーチームにスクラム（っぽい）開発手法を導入してみた話"
+title: "スクラム開発手法を導入してみた話"
 emoji: "🍡"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["スクラム"] # タグ。["markdown", "rust", "aws"]のように指定する
@@ -40,6 +40,10 @@ published: false # 公開設定（falseにすると下書き）
 ***
 実際にどのように進めていったのかを説明します。
 
+### チーム構成
+- バックエンドエンジニア：6名
+社内にスクラムマスターはいなかったため、アンチパターンではありますが私自身がスクラムチームに参加しつつスクラムの説明や進行を行っています。
+
 ### スクラムイベント
 1スプリントは1週間に設定しました。
 スクラムにおけるスクラムイベントについてどのような形で進めていったのか説明します。
@@ -48,20 +52,20 @@ published: false # 公開設定（falseにすると下書き）
 
 #### 工数出し・担当決め
 - スプリントプランニングに当たるもの
-- 毎週月曜日に1h
+- 月曜日に1h
 - 月曜日が祝日などで休みの場合は火曜日に実施
 
 ##### 概算見積もり
-メンバー全員でプランニングポーカーを用いて実施しました。
+メンバー全員でプランニングポーカーを用いて実施しています。
 事前に基準（3になるもの）となるポイントを定めて試算するようにしました。
-提示したポイントの理由も話し合うようにし、 見落としていた懸念の洗い出せるようにしました。
+提示したポイントの理由も話し合うようにし、見落としていた懸念の洗い出せるようにしました。
 
 ##### 担当者決め
-スプリントバックログの中から着手順の上位のものをやりたいものを自身のスケジュールを考慮しながら選択してもらいました。
+スプリントバックログの中から着手順の上位のものをやりたいものを自身のスケジュールを考慮しながら選択してもらいます。
 
 ##### 作業細分化
 担当者になった人が具体的なタスクを洗い出し、そのタスクそれぞれに対して工数を見積もります。
-理想として1日以下で完結する単位で分割するように心がけました。
+理想として1日以下で完結する単位で分割するようにしています。
 
 #### 朝会
 - デイリースクラムに当たるもの
@@ -76,7 +80,7 @@ published: false # 公開設定（falseにすると下書き）
 
 #### お披露目会
 - スプリントレビューに当たるもの
-- 毎週金曜日に30h
+- 金曜日に30h
 - 金曜日が休みの場合は前日に実施
 
 各担当者が実際の画面を見せながら成果を見せる形式で実施しました。
@@ -84,7 +88,7 @@ published: false # 公開設定（falseにすると下書き）
 
 #### 振り返り
 - スプリントレトロスペクティブに当たるもの
-- 毎週金曜日に30h
+- 金曜日に30h
 - 必ずお披露目会の後に行う
 - 金曜日が休みの場合は前日に実施
 
@@ -163,7 +167,6 @@ GitHubのissueに登録するようにしました。
 - やらされてる感がない
 
 これは感覚値にはなってしまいますが、各メンバーが自分で次のスプリントでやりたいことを選択していたので、決めたタスクに対する責任感が増したと思います。
-
 
 - 属人化が薄まった
 
