はじめにを微調整

--- a/articles/842ff9d2121ba7.md
+++ b/articles/842ff9d2121ba7.md
@@ -24,8 +24,7 @@ published: false # 公開設定（falseにすると下書き）
 
 ## はじめに
 ***
-本記事では私がリーダーをやらせていただいているサーバーチームにスクラム開発を取り入れら際のことを紹介していきます。
-取り入れたチームや管理するものの性質上、厳密に言うとスクラム開発でない部分もあるかと思います。
+本記事では私がリーダーを務めているサーバーチームにスクラム開発を取り入れた際のことを紹介していきます。
 スクラム開発をベースにチームや課題に合った形で取り入れたため、スクラムガイド通りではない部分やアンチパターンになってしまったこともありますのでご留意ください。
 
 ## きっかけ
