まとめ調整

--- a/articles/842ff9d2121ba7.md
+++ b/articles/842ff9d2121ba7.md
@@ -175,7 +175,8 @@ GitHubのissueに登録するようにしました。
 ***
 スクラムガイド通りの導入とはいかず、今回行った開発手法は厳密にはスクラム開発とは異なる進め方になってしまった部分も多くありました。
 しかしながら、スクラム開発を進める上で障害になりそうなことや得られるメリットの一部については経験できたのは良い学びになりました。
-また、書籍には書かれていない細かい課題に対する対応やそれによる影響など、実践しないとわからないこともありました。
+また、書籍には書かれていない細かい課題に対する対応やそれによる影響など、実践することで得られた知見も多くありました。
+社内ではまだまだスクラム開発に対する知見がなく、なかなかスクラムを導入するのは難しいですが引き続き、開発効率向上に務めていきたいと思います。
 
 最後まで読んでいただき、ありがとうございました。
 
