仮画像差し込み

--- a/articles/842ff9d2121ba7.md
+++ b/articles/842ff9d2121ba7.md
@@ -49,6 +49,8 @@ published: false # 公開設定（falseにすると下書き）
 専門用語では直感で何をするのかわかりづらかったため、チーム内ではあまり使いませんでした。
 そのため、チーム内で実際に呼んでいた用語で説明していきます。
 
+![1スプリントのスケジュール](https://storage.googleapis.com/zenn-user-upload/469f37d9f897-20221209.png)
+
 #### 工数出し・担当決め
 - スプリントプランニングに当たるもの
 - 月曜日に1h
@@ -105,9 +107,14 @@ GitHubのissueに登録するようにしました。
 そのissueをProjectボードを使って管理しています。
 ボード形式なのでそれぞれのタスクの進捗が見やすく、直感的にステータスを変更できるのでタスクの可視化に最適でした。
 
+![GitHubのProjectBoard](https://storage.googleapis.com/zenn-user-upload/c61f93325f32-20221209.png)
+
 #### スプリントバックログ
 プロジェクト全体の進捗管理としてwrikeを使用していたので、具体的なタスクに落とし込む際はwrikeを使いました。
 担当者にissueに細分化した作業と工数を記載してもらい、それをもとにwrikeに登録しています。
+
+![wrikeのボード機能](https://storage.googleapis.com/zenn-user-upload/a83b562e2cb7-20221209.png)
+ステータスは朝会で画面共有しながら進捗を更新します。
 
 ## 導入時の課題
 ***
