プランニングポーカーの画像差し込み

--- a/articles/842ff9d2121ba7.md
+++ b/articles/842ff9d2121ba7.md
@@ -139,6 +139,8 @@ GitHubのissueに登録するようにしました。
 メンバーが自前でツールを作ってくれた
 とても使い勝手が良かった
 
+![メンバー自作のプランニングポーカーツール](https://storage.googleapis.com/zenn-user-upload/eefdca17b0f0-20221209.jpg)
+
 - スクラムイベントのためのまとまった時間を取れない
 
 プロジェクト以外のミーティングに参加しているメンバーもおり、メンバー全員が揃う時間を1時間まとめて取ることが難しいことが多かった。
