--- a/articles/842ff9d2121ba7.md
+++ b/articles/842ff9d2121ba7.md
@@ -118,14 +118,12 @@ GitHubのissueに登録するようにしました。
 
 ## 導入時の課題
 ***
-- そもそもスクラムの知見がない
-
+#### そもそもスクラムの知見がない
 今までスクラム開発に触れる機会がなくスクラムとはなにか？をわからない状態でした。
 そこで、導入前にスクラム開発とはどんなものなのか、導入した際にどんなことをするのかをまとめた資料を作って展開しました。
 おそらく、スクラム開発をメンバー全員が理解しないまま進めていたら目的や意図がうまく伝わらず、同じ方向を向いて開発を進めることが難しかったと思います。
 
-- 在宅ワークの日もあるため毎日顔を合わせられない
-
+#### 在宅ワークの日もあるため毎日顔を合わせられない
 週2で在宅ワークの日があり、毎日同じ場所に集まることができない。
 物理的なホワイトボードなどを使って進捗の可視化することが困難。
 プロダクトバックログやスプリントバックログは、Webツールを使って可視化した。
@@ -133,7 +131,7 @@ GitHubのissueに登録するようにしました。
 
 ## 導入後の課題
 ***
-- 無料のプランニングポーカーツールの使い勝手が悪かった 
+#### 無料のプランニングポーカーツールの使い勝手が悪かった 
 
 ルームが一定時間経つと勝手に解散されてしまう
 メンバーが自前でツールを作ってくれた
@@ -141,18 +139,18 @@ GitHubのissueに登録するようにしました。
 
 ![メンバー自作のプランニングポーカーツール](https://storage.googleapis.com/zenn-user-upload/eefdca17b0f0-20221209.jpg)
 
-- スクラムイベントのためのまとまった時間を取れない
+#### スクラムイベントのためのまとまった時間を取れない
 
 プロジェクト以外のミーティングに参加しているメンバーもおり、メンバー全員が揃う時間を1時間まとめて取ることが難しいことが多かった。
 スプリントプランニングをストーリーポイント出しと担当決めを各30分ずつに分けてミーティングを行うようにした。
 ただし、ストーリーポイント出しが済んでいないと担当決めはできないので、前後関係は守るようにした。
 
-- 振り返りが長引くことがあった
+#### 振り返りが長引くことがあった
 
 スプリントレトロスペクティブで振り返り、改善を考える際に議論が盛り上がって時間が足りないことがあった。
 振り返り用のフォーマット（アジェンダ）を用意してその流れに沿って行うようにした。
 
-- 休暇などでミーティングに出られないメンバーがいることがある
+#### 休暇などでミーティングに出られないメンバーがいることがある
 
 病欠や家庭の事情などで急遽休みのメンバーが出て全員揃って開催が難しい時があった
 メンバーがかけた状態で開催せずに必ず全員揃って開催するようにした。
@@ -161,22 +159,18 @@ GitHubのissueに登録するようにしました。
 
 ## 導入してよかったこと
 ***
-- 各メンバーが今日何をして、どんなステータスなのかがわかりやすくなった
+#### 各メンバーが今日何をして、どんなステータスなのかがわかりやすくなった
 
 それぞれが担当しているタスクのステータスをみんながいる前で更新するため、対応者以外でも進捗把握がしやすくなった。
 メンバー同士の連携もしやすくなった。
 
-- チーム全員で対応内容の認識合わせができた
+#### チーム全員で対応内容の認識合わせができた
 
 スプリントプランニングでの工数だしの際にその対応はどんな作業が発生し、どんなことに気をつけなければいけないのかの共有ができた。
 それにより、関連箇所に詳しくないメンバーでも対応をスムーズに進められた。
 また、属人化しそうな部分に気づくこともできた。
 
-- やらされてる感がない
-
-これは感覚値にはなってしまいますが、各メンバーが自分で次のスプリントでやりたいことを選択していたので、決めたタスクに対する責任感が増したと思います。
-
-- 属人化が薄まった
+#### 属人化が薄まった
 
 プランニングポーカーやお披露目会などを行ったことでどのような対応をし、最終的にどのように落とし込まれたのか全員で共有できたことで、担当者以外も対応内容と結果を正しく把握することができた。
 
