--- a/articles/842ff9d2121ba7.md
+++ b/articles/842ff9d2121ba7.md
@@ -131,26 +131,21 @@ GitHubのissueに登録するようにしました。
 ## 導入後の課題
 ***
 #### 無料のプランニングポーカーツールの使い勝手が悪かった 
-
-ルームが一定時間経つと勝手に解散されてしまう
-メンバーが自前でツールを作ってくれた
-とても使い勝手が良かった
+リモートでも概算見積もりを行うこともあったため、無料で使用できるプランニングポーカーのWebツールを使用していましたが、ルームが一定時間経つと勝手に解散されてしまう等の課題がありました。
+そこで、メンバーが自分たちの使い方にあったツールを作ってくれたおかげでこの問題が解決しました。
 
 ![メンバー自作のプランニングポーカーツール](https://storage.googleapis.com/zenn-user-upload/db7975a54e56-20221209.png)
 
 #### スクラムイベントのためのまとまった時間を取れない
-
 プロジェクト以外のミーティングに参加しているメンバーもおり、メンバー全員が揃う時間を1時間まとめて取ることが難しいことが多かった。
 スプリントプランニングをストーリーポイント出しと担当決めを各30分ずつに分けてミーティングを行うようにした。
 ただし、ストーリーポイント出しが済んでいないと担当決めはできないので、前後関係は守るようにした。
 
 #### 振り返りが長引くことがあった
-
 スプリントレトロスペクティブで振り返り、改善を考える際に議論が盛り上がって時間が足りないことがあった。
 振り返り用のフォーマット（アジェンダ）を用意してその流れに沿って行うようにした。
 
 #### 休暇などでミーティングに出られないメンバーがいることがある
-
 病欠や家庭の事情などで急遽休みのメンバーが出て全員揃って開催が難しい時があった
 メンバーがかけた状態で開催せずに必ず全員揃って開催するようにした。
 翌日などで調整。
@@ -159,25 +154,21 @@ GitHubのissueに登録するようにしました。
 ## 導入してよかったこと
 ***
 #### 各メンバーが今日何をして、どんなステータスなのかがわかりやすくなった
-
 それぞれが担当しているタスクのステータスをみんながいる前で更新するため、対応者以外でも進捗把握がしやすくなった。
 メンバー同士の連携もしやすくなった。
 
 #### チーム全員で対応内容の認識合わせができた
-
 スプリントプランニングでの工数だしの際にその対応はどんな作業が発生し、どんなことに気をつけなければいけないのかの共有ができた。
 それにより、関連箇所に詳しくないメンバーでも対応をスムーズに進められた。
 また、属人化しそうな部分に気づくこともできた。
 
 #### 属人化が薄まった
-
 プランニングポーカーやお披露目会などを行ったことでどのような対応をし、最終的にどのように落とし込まれたのか全員で共有できたことで、担当者以外も対応内容と結果を正しく把握することができた。
 
 ## まとめ
 ***
 スクラムガイド通りの導入とはいかず、今回行った開発手法は厳密にはスクラム開発とは異なる進め方になってしまった部分も多くありました。
 しかしながら、スクラム開発を進める上で障害になりそうなことや得られるメリットの一部については経験できたのは良い学びになりました。
-また、書籍には書かれていない細かい課題に対する対応やそれによる影響など、実践することで得られた知見も多くありました。
 社内ではまだまだスクラム開発に対する知見がなく、なかなかスクラムを導入するのは難しいですが引き続き、開発効率向上に務めていきたいと思います。
 
 最後まで読んでいただき、ありがとうございました。
