--- a/articles/842ff9d2121ba7.md
+++ b/articles/842ff9d2121ba7.md
@@ -1,5 +1,5 @@
 ---
-title: "スクラム開発手法を導入してみた話"
+title: "スクラム開発を取り入れてみた話"
 emoji: "🍡"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["スクラム"] # タグ。["markdown", "rust", "aws"]のように指定する
@@ -23,57 +23,57 @@ published: false # 公開設定（falseにすると下書き）
 
 ## はじめに
 ***
-本記事では私がリーダーを務めているサーバーチームにスクラム開発を取り入れた際のことを紹介していきます。
-スクラム開発をベースにチームや課題に合った形で取り入れたため、スクラムガイド通りではない部分やアンチパターンになってしまったこともありますのでご留意ください。
+本記事では私がリーダーを務めているサーバーチームにスクラム開発を取り入れたことを紹介していきます。
+チーム状況などを考慮して部分的に取り入れた状態となってしまい、スクラムガイド通りではない部分やアンチパターンになってしまったこともありますのでその点をご留意ください。
 
 ## きっかけ
 ***
-社内のサーバーエンジニア組織で分科会と言うものがありその一環でリーダーに必要なスキルについて考え学ぶ機会がありました。
-その中で開発手法を学ぶこともあり、その1つとしてスクラム開発に触れました。
-スクラムに関する本を読んだり議論しりたりしましたが、実際の現場に導入して知見を得たいと思ったことがきっかけでした。
+社内のサーバーエンジニア組織で分科会と言うものがあり、そこで開発手法について学ぶ機会があり、その1つとしてスクラム開発に触れました。
+スクラムに関する書籍を読んだり分科会のメンバーで議論しりたりしましたが、実際の現場に導入して知見を得たいと思ったことがきっかけでした。
 しかし、既に稼働している大きな組織にいきなり導入することは難しいと考え、まずは自分のいるサーバーチームに小規模で導入してみようと考えました。
-タイミング的に機能開発関連のタスクが落ち着いており、私がリーダーをやらせていただいていると言うこともありスケジュール調整にある程度融通が効くため進めることにしました。
+タイミングとしても 大きなメインの機能開発が落ち着いており、スケジュール調整にある程度融通が効くため進めることにしました。
 
 ## 実際の取り組み
 ***
-実際にどのように進めていったのかを説明します。
+では、実際にどのように進めていったのか説明していきます。
 
 ### チーム構成
 - バックエンドエンジニア：6名
-社内にスクラムマスターはいなかったため、アンチパターンではありますが私自身がスクラムチームに参加しつつスクラムの説明や進行を行っています。
+社内にスクラムマスターはいなかったため、アンチパターンではありますが私自身がスクラムチームに参加しつつスクラムの説明や進行を行っていきました。
 
 ### スクラムイベント
-1スプリントは1週間に設定しました。
 スクラムにおけるスクラムイベントについてどのような形で進めていったのか説明します。
 専門用語では直感で何をするのかわかりづらかったため、チーム内ではあまり使いませんでした。
 そのため、チーム内で実際に呼んでいた用語で説明していきます。
 
+まず、1スプリントの期間は1週間に設定しました。
 ![1スプリントのスケジュール](https://storage.googleapis.com/zenn-user-upload/469f37d9f897-20221209.png)
 
 #### 工数出し・担当決め
 - スプリントプランニングに当たるもの
 - 月曜日に1h
 - 月曜日が祝日などで休みの場合は火曜日に実施
+- 参加できないメンバーがいる場合は全員が参加できる最速のタイミングに調整して実施
 
 ##### 概算見積もり
-メンバー全員でプランニングポーカーを用いて実施しています。
-事前に基準（3になるもの）となるポイントを定めて試算するようにしました。
-提示したポイントの理由も話し合うようにし、見落としていた懸念の洗い出せるようにしました。
+メンバー全員でプランニングポーカーを用いて実施しました。
+事前に基準となるポイントを定めて試算するようにしました。※〇〇形式とかあった気がする
+提示したポイントの理由も話し合うことで、見落としていた懸念や各々の不明点の洗い出せるようにしました。
 
 ##### 担当者決め
 スプリントバックログの中から着手順の上位のものをやりたいものを自身のスケジュールを考慮しながら選択してもらいます。
 
 ##### 作業細分化
-担当者になった人が具体的なタスクを洗い出し、そのタスクそれぞれに対して工数を見積もります。
-理想として1日以下で完結する単位で分割するようにしています。
+担当者になったメンバーがそのissueを完了するために必要な具体的なタスクを洗い出し、そのタスクそれぞれに対して工数を見積もります。
+各タスクは理想として1日以下で完結する単位で分割するようにしていきました。
 
 #### 朝会
 - デイリースクラムに当たるもの
 - 毎朝15m
 - メンバーが揃わなくても実施
 
-タスクはwrikeで進捗管理を行っていたので、wrikeの画面を全員でみながら進捗の更新などを行いました。
-各メンバーから方おくしてもらう内容は以下の通りです。
+タスクの進捗管理ははwrike使用し、wrikeの画面を全員でみながら進捗の更新などを行いました。
+各メンバーから報告してもらう内容は以下の通りです。
 1. 昨日したこと
 2. 今日すること
 3. 相談したいことの頭出し（この場で深掘りせず別途時間を取り、関係者を集めて相談する）
@@ -82,59 +82,54 @@ published: false # 公開設定（falseにすると下書き）
 - スプリントレビューに当たるもの
 - 金曜日に30h
 - 金曜日が休みの場合は前日に実施
+- 参加できないメンバーがいる場合は全員が参加できる最速のタイミングに調整して実施
 
-各担当者が実際の画面を見せながら成果を見せる形式で実施しました。
-また、その成果に対してみんなで褒め合うようにしました。
+各担当者がissueの内容を簡潔に伝えつつ、実際の画面を共有しながら行うデモ形式で実施しました。
+着手前の想定と異なった箇所について説明や簡単な質疑応答も行いました。
+本来は〇〇も参加してもらいレビューするのですが、サーバーチーム内で閉じているissueに絞っているためレバーチームメンバーのみで行いました。
 
 #### 振り返り
 - スプリントレトロスペクティブに当たるもの
-- 金曜日に30h
+- 金曜日に30m
 - 必ずお披露目会の後に行う
 - 金曜日が休みの場合は前日に実施
+- 参加できないメンバーがいる場合は全員が参加できる最速のタイミングに調整して実施
 
-アプリボットでは「振り返りと計画」を習慣化するという取り組みがあり、毎週金曜日に時間が取られていたのでその時間をそのまま使用しました。
-以下の順番で進めました
+Applibotでは「振り返りと計画」を習慣化するという取り組みがあり、毎週金曜日に時間が取られていたのでその時間をそのまま使用しました。
+振り返りでは以下の順番で進め、必ず次週の目標を決めるようにしています。
 1. 先週立てた目標に対する振り返り
 2. 振り返りに対し、改善案の検討
 3. 改善案を受けての次週の目標設定
 
 ### 使用した管理ツール
-スクラム開発を進めるにあたって実際に作成しやものについて説明します。
+スクラム開発を進めるにあたって使用したツールついて説明します。
 
-#### プロダクトバックログ
-GitHubのissueに登録するようにしました。
+#### Projectボード
+プロダクトバックログはGitHubのissueに登録するようにしました。
 そのissueをProjectボードを使って管理しています。
 ボード形式なのでそれぞれのタスクの進捗が見やすく、直感的にステータスを変更できるのでタスクの可視化に最適でした。
 
 ![GitHubのProjectBoard](https://storage.googleapis.com/zenn-user-upload/c61f93325f32-20221209.png)
 
-#### スプリントバックログ
-プロジェクト全体の進捗管理としてwrikeを使用していたので、具体的なタスクに落とし込む際はwrikeを使いました。
+#### Wrike
+プロジェクト全体の進捗管理としてwrikeを使用していたので、スプリントバックログはwrikeを使いました。
 担当者にissueに細分化した作業と工数を記載してもらい、それをもとにwrikeに登録しています。
 
 ![wrikeのボード機能](https://storage.googleapis.com/zenn-user-upload/a83b562e2cb7-20221209.png)
-ステータスは朝会で画面共有しながら進捗を更新します。
 
-## 導入時の課題
+#### プランニングポーカーツール
+リモートでも概算見積もりを行うこともあったため、無料で使用できるプランニングポーカーのWebツールを使用していましたが、ルームが一定時間経つと勝手に解散されてしまう等の課題がありました。
+そこで、メンバーが自分たちの使い方にあったツールを作ってくれたおかげでこの問題が解決しました。
+
+![メンバー自作のプランニングポーカーツール](https://storage.googleapis.com/zenn-user-upload/db7975a54e56-20221209.png)
+
+## 出てきた課題課題
 ***
-#### そもそもスクラムの知見がない
-今までスクラム開発に触れる機会がなくスクラムとはなにか？をわからない状態でした。
-そこで、導入前にスクラム開発とはどんなものなのか、導入した際にどんなことをするのかをまとめた資料を作って展開しました。
-おそらく、スクラム開発をメンバー全員が理解しないまま進めていたら目的や意図がうまく伝わらず、同じ方向を向いて開発を進めることが難しかったと思います。
-
 #### 在宅ワークの日もあるため毎日顔を合わせられない
 週2で在宅ワークの日があり、毎日同じ場所に集まることができない。
 物理的なホワイトボードなどを使って進捗の可視化することが困難。
 プロダクトバックログやスプリントバックログは、Webツールを使って可視化した。
 使用したツールについては後ほど説明します。
-
-## 導入後の課題
-***
-#### 無料のプランニングポーカーツールの使い勝手が悪かった 
-リモートでも概算見積もりを行うこともあったため、無料で使用できるプランニングポーカーのWebツールを使用していましたが、ルームが一定時間経つと勝手に解散されてしまう等の課題がありました。
-そこで、メンバーが自分たちの使い方にあったツールを作ってくれたおかげでこの問題が解決しました。
-
-![メンバー自作のプランニングポーカーツール](https://storage.googleapis.com/zenn-user-upload/db7975a54e56-20221209.png)
 
 #### スクラムイベントのためのまとまった時間を取れない
 プロジェクト以外のミーティングに参加しているメンバーもおり、メンバー全員が揃う時間を1時間まとめて取ることが難しいことが多かった。
@@ -154,20 +149,17 @@ GitHubのissueに登録するようにしました。
 ## 導入してよかったこと
 ***
 #### 各メンバーが今日何をして、どんなステータスなのかがわかりやすくなった
-それぞれが担当しているタスクのステータスをみんながいる前で更新するため、対応者以外でも進捗把握がしやすくなった。
-メンバー同士の連携もしやすくなった。
+それぞれが担当しているタスクのステータスをみんながいる前で更新するため、メンバーからも他のメンバーの進捗把握がしやすくなったということも挙がっています。
 
-#### チーム全員で対応内容の認識合わせができた
-スプリントプランニングでの工数だしの際にその対応はどんな作業が発生し、どんなことに気をつけなければいけないのかの共有ができた。
-それにより、関連箇所に詳しくないメンバーでも対応をスムーズに進められた。
-また、属人化しそうな部分に気づくこともできた。
+#### 対応内容の認識合わせをする場ができた
+スプリントプランニングでの工数出しの際にそのissueはどんな作業が発生し、どんなことに気をつけなければいけないのかをメンバー全員ですり合わせを行うことで、経験の浅いメンバーでも対応をスムーズに進めルことができました。
 
 #### 属人化が薄まった
-プランニングポーカーやお披露目会などを行ったことでどのような対応をし、最終的にどのように落とし込まれたのか全員で共有できたことで、担当者以外も対応内容と結果を正しく把握することができた。
+プランニングポーカーやお披露目会などを行ったことでどのような対応をし、最終的にどのように落とし込まれたのか全員で共有できたことで、担当者以外も対応内容と結果を正しく把握することができました。
 
 ## まとめ
 ***
-スクラムガイド通りの導入とはいかず、今回行った開発手法は厳密にはスクラム開発とは異なる進め方になってしまった部分も多くありました。
+スクラムガイド通りの導入とはいかず、部分的にスクラム開発を取り入れる形となってしまいました。
 しかしながら、スクラム開発を進める上で障害になりそうなことや得られるメリットの一部については経験できたのは良い学びになりました。
 社内ではまだまだスクラム開発に対する知見がなく、なかなかスクラムを導入するのは難しいですが引き続き、開発効率向上に務めていきたいと思います。
 
