--- a/articles/842ff9d2121ba7.md
+++ b/articles/842ff9d2121ba7.md
@@ -109,19 +109,23 @@ Applibotでは「振り返りと計画」を習慣化するという取り組み
 そのissueをProjectボードを使って管理しています。
 ボード形式なのでそれぞれのタスクの進捗が見やすく、直感的にステータスを変更できるのでタスクの可視化に最適でした。
 
-![GitHubのProjectBoard](https://storage.googleapis.com/zenn-user-upload/c61f93325f32-20221209.png)
+![GitHubのProjectBoard](https://storage.googleapis.com/zenn-user-upload/1e2ef18cbc46-20221209.png)
 
 #### Wrike
-プロジェクト全体の進捗管理としてwrikeを使用していたので、スプリントバックログはwrikeを使いました。
+プロジェクト全体の進捗管理としてwrikeを使用していたので、スプリントバックログはwrikeで管理することにしました。
 担当者にissueに細分化した作業と工数を記載してもらい、それをもとにwrikeに登録しています。
 
-![wrikeのボード機能](https://storage.googleapis.com/zenn-user-upload/a83b562e2cb7-20221209.png)
+![wrikeのボード機能](https://storage.googleapis.com/zenn-user-upload/eb0b0b874d69-20221209.png)
 
 #### プランニングポーカーツール
 リモートでも概算見積もりを行うこともあったため、無料で使用できるプランニングポーカーのWebツールを使用していましたが、ルームが一定時間経つと勝手に解散されてしまう等の課題がありました。
 そこで、メンバーが自分たちの使い方にあったツールを作ってくれたおかげでこの問題が解決しました。
 
-![メンバー自作のプランニングポーカーツール](https://storage.googleapis.com/zenn-user-upload/db7975a54e56-20221209.png)
+![メンバー自作のツール（ポイント非表示）](https://storage.googleapis.com/zenn-user-upload/7cb2fe79ea13-20221209.png)
+全員が投稿が完了するまでポイントは非表示にしておきます。
+
+![メンバー自作のツール（ポイント表示）](https://storage.googleapis.com/zenn-user-upload/f46fbc3d0358-20221209.png)
+全員が投稿完了したらポイントを表示し、すり合わせを行います。
 
 ## 出てきた課題課題
 ***
