--- a/articles/842ff9d2121ba7.md
+++ b/articles/842ff9d2121ba7.md
@@ -46,24 +46,26 @@ published: false # 公開設定（falseにすると下書き）
 専門用語では直感で何をするのかわかりづらかったため、チーム内ではあまり使いませんでした。
 そのため、チーム内で実際に呼んでいた用語で説明していきます。
 
-まず、1スプリントの期間は1週間に設定しました。
-![1スプリントのスケジュール](https://storage.googleapis.com/zenn-user-upload/469f37d9f897-20221209.png)
+1スプリントの期間は1週間に設定しました。
+スクラムイベントは以下のスケジュールで実施しています。
+![1スプリントのスケジュール](https://storage.googleapis.com/zenn-user-upload/a92ca7443dcc-20221210.png)
 
-#### 工数出し・担当決め
+#### 工数出し（概算見積もり）
 - スプリントプランニングに当たるもの
-- 月曜日に1h
+- 週1で30m（メンバー全員の予定の合う時間で実施）
+
+工数のすり合わせにはプランニングポーカーを用いました。
+提示したポイントの理由も話し合うことで、見落としていた懸念や各々の不明点の洗い出せるようにしました。
+開始時点では担当決め・作業細分化とセットで1hで行っていました。
+しかし、月曜日は元々ミーティングが多く入っており1hまとめて取ること難しかったため、事前に工数出しを行っておけば担当者決めと作業細分化は実施可能なため分割することにしました。
+
+### 担当者決め・作業細分化
+- スプリントプランニングに当たるもの
+- 月曜日に30m
 - 月曜日が祝日などで休みの場合は火曜日に実施
 - 参加できないメンバーがいる場合は全員が参加できる最速のタイミングに調整して実施
 
-##### 概算見積もり
-メンバー全員でプランニングポーカーを用いて実施しました。
-事前に基準となるポイントを定めて試算するようにしました。※〇〇形式とかあった気がする
-提示したポイントの理由も話し合うことで、見落としていた懸念や各々の不明点の洗い出せるようにしました。
-
-##### 担当者決め
-スプリントバックログの中から着手順の上位のものをやりたいものを自身のスケジュールを考慮しながら選択してもらいます。
-
-##### 作業細分化
+スプリントバックログの中から着手順の上位のものうち、自身のスケジュールを考慮しながら選択します。
 担当者になったメンバーがそのissueを完了するために必要な具体的なタスクを洗い出し、そのタスクそれぞれに対して工数を見積もります。
 各タスクは理想として1日以下で完結する単位で分割するようにしていきました。
 
@@ -86,7 +88,7 @@ published: false # 公開設定（falseにすると下書き）
 
 各担当者がissueの内容を簡潔に伝えつつ、実際の画面を共有しながら行うデモ形式で実施しました。
 着手前の想定と異なった箇所について説明や簡単な質疑応答も行いました。
-本来は〇〇も参加してもらいレビューするのですが、サーバーチーム内で閉じているissueに絞っているためレバーチームメンバーのみで行いました。
+本来はプロダクトオーナーやプロダクトマネージャーも参加してもらいレビューするのですが、サーバーチーム内で閉じているissueに絞っているためレバーチームメンバーのみで行いました。
 
 #### 振り返り
 - スプリントレトロスペクティブに当たるもの
