--- a/articles/842ff9d2121ba7.md
+++ b/articles/842ff9d2121ba7.md
@@ -1,9 +1,9 @@
 ---
 title: "スクラム開発を取り入れてみた話"
 emoji: "🍡"
-type: "tech" # tech: 技術記事 / idea: アイデア
+type: "idea" # tech: 技術記事 / idea: アイデア
 topics: ["スクラム"] # タグ。["markdown", "rust", "aws"]のように指定する
-published: false # 公開設定（falseにすると下書き）
+published: true # 公開設定（falseにすると下書き）
 ---
 こちらは「[Applibot Advent Calendar 2022](https://qiita.com/advent-calendar/2022/applibot)」10日目の記事になります。
 
