--- a/articles/d6195045540d3d.md
+++ b/articles/d6195045540d3d.md
@@ -3,7 +3,7 @@ title: "電子工作初心者が電子楽器作ってみた"
 emoji: "🎸"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["電子工作", "Arduino"] # タグ。["markdown", "rust", "aws"]のように指定する
-published: false # 公開設定（falseにすると下書き）
+published: true # 公開設定（falseにすると下書き）
 ---
 こちらは「[Applibot Advent Calendar 2023](https://qiita.com/advent-calendar/2023/applibot)」7日目の記事になります。前回の記事は[コチラ](https://qiita.com/ttakuya50/items/b715178da8e8625de3cf)です。
 
