--- a/articles/d6195045540d3d.md
+++ b/articles/d6195045540d3d.md
@@ -22,8 +22,8 @@ published: true # 公開設定（falseにすると下書き）
 
 ## なんで電子楽器？
 ***
-好きなアーティストのかたが特殊な電子楽器を使っており、自分でも弾いてみたいからなんとか作れないかと考えたのがきっかけでした。
-普段業務でプログラムを書いており、プログラミングスキルを活かしてなんとかできるではないかと思いました。
+好きなアーティストのかたが特殊な電子楽器を使っており、自分でも弾いてみたいと思いなんとか作れないかと考えたのがきっかけでした。
+普段業務でプログラムを書いており、プログラミングスキルを活かしてなんとかできるではないかと考え作ることを決意しました。
 
 ## Arduinoを用いて音を鳴らす
 ***
